# Flex

./: .gitignore  .gitmodules  CMakeLists.txt  Documentation.md  imgui.ini  readme.md  sonar-project.properties
.github/workflows/: linux-build.yml  windows-build.yml
Flex/: CMakeLists.txt  Flex.cmake  FlexEngine.cmake
Flex/Resources/scenes/: default_scene.json
Flex/Resources/shaders/: bloom_blur.frag.glsl  bloom_downsample.frag.glsl  line.frag.glsl  line.vert.glsl  pbr.vert.glsl  screen.vertex.glsl  shadow_depth.frag.glsl  ssao.frag.glsl  text.frag.glsl
Flex/Source/App/: App.cpp  App.h
Flex/Source/Core/: App.cpp  App.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Event.hpp  ImGuiContext.cpp  ImGuiContext.h  ImGuinContext.cpp  Main.cpp  Screen.cpp  Screen.h  Types.h  UIHelper.h  UUID.cpp  UUID.h
Flex/Source/Math/: Math.hpp
Flex/Source/Physics/: JoltListeners.cpp  JoltListeners.h  JoltPhysics.cpp  JoltPhysics.h  JoltPhysicsScene.cpp  JoltPhysicsScene.h
Flex/Source/Renderer/: Bloom.cpp  Bloom.h  CascadedShadowMap.cpp  CascadedShadowMap.h  Composite.cpp  Composite.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Gizmo.cpp  Gizmo.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererCommon.h  SSAO.cpp  SSAO.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
Flex/Source/Scene/: Components.h  Entity.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Serializer.cpp  Serializer.h  entt.h
Runtime/: CMakeLists.txt
Scripting/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/Source/: Main.cpp
resources/models/: monkey.gltf
resources/shaders/: bloom_blur.frag.glsl  bloom_downsample.frag.glsl  bloom_fullscreen.vert.glsl  bloom_upsample.frag.glsl  default.frag.glsl  default.vertex.glsl  invert_color.comp.glsl  pbr.frag.glsl  pbr.vertex.glsl  screen.frag.glsl  screen.vertex.glsl  shadow_depth.vert.glsl  skybox.frag.glsl  skybox.vertex.glsl  ssao_blur.frag.glsl  ssao_fullscreen.vert.glsl  test.comp.glsl  text.frag.glsl  text.vertex.glsl
src/: Font.cpp  Font.h  IndexBuffer.cpp  Main.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  main.cpp  shader.cpp  shader.h
src/Core/: Camera.cpp  Camera.h  Camera.hpp  Main.cpp  UIHelper.h
src/Math/: Math.hpp
src/Renderer/: Bloom.cpp  Bloom.h  CascadedShadowMap.cpp  CascadedShadowMap.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Gizmo.cpp  Gizmo.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  RendererCommon.h  SSAO.cpp  SSAO.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
src/Scene/: Model.cpp  Model.h
